added styles.css & updated index.html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Git Test</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1>Welcome to DBS</h1>
+
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore, dolor, excepturi veritatis doloribus, consequuntur eum itaque mollitia praesentium totam veniam ullam fuga rem ad repellendus iusto id laudantium hic eveniet.</p>
     
 </body>
 </html>
